# innowise_laboratory

lecture_1/: pyproject.toml
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: queries.sql  school.db
lecture_5/book_api/: main.py  pyproject.toml
lecture_6/: dockerfile  requirements.txt
